--- a/players.html
+++ b/players.html
@@ -119,17 +119,11 @@
             transform: translateX(5px);
         }
 
-        .sidebar-menu li.active a::before {
-            content: '';
-            position: absolute;
-            left: -1px;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 8px;
-            height: 8px;
-            background: var(--accent-color);
-            border-radius: 50%;
-            box-shadow: 0 0 10px var(--accent-color);
+        .sidebar-menu li.active a {
+            background: linear-gradient(90deg, rgba(0, 255, 136, 0.2), transparent);
+            color: var(--neon-green);
+            border-left: 4px solid var(--neon-green);
+            position: relative;
         }
 
         .sidebar-menu .icon {
