--- a/over.html
+++ b/over.html
@@ -85,7 +85,7 @@
         .sidebar-title {
             font-size: 1.2rem;
             font-weight: 700;
-            background: linear-gradient(45deg, var(--sidebar-accent-color), #60a5fa);
+            background: linear-gradient(45deg, var(--sidebar-accent-color), #00ffaa);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
