--- a/over.html
+++ b/over.html
@@ -124,7 +124,7 @@
         }
 
         .sidebar-menu li.active a {
-            background: linear-gradient(90deg, rgba(59, 130, 246, 0.2), transparent);
+            background: linear-gradient(90deg,  #00ffaa, transparent);
             color: var(--sidebar-accent-color);
             border-left: 3px solid var(--sidebar-accent-color);
         }
