--- a/over.html
+++ b/over.html
@@ -118,13 +118,13 @@
         }
 
         .sidebar-menu a:hover {
-            background: rgba(59, 130, 246, 0.1);
+            background:  #00ffaa;
             color: var(--sidebar-accent-color);
             transform: translateX(5px);
         }
 
         .sidebar-menu li.active a {
-            background: linear-gradient(90deg,  #00ffaa, transparent);
+            background: linear-gradient(90deg, rgba(59, 130, 246, 0.2), transparent);
             color: var(--sidebar-accent-color);
             border-left: 3px solid var(--sidebar-accent-color);
         }
