--- a/over.html
+++ b/over.html
@@ -26,8 +26,7 @@
             --radius: 8px;
             --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
             /* Variáveis da sidebar */
-            --sidebar-primary-color: #10b981;
-            --sidebar-accent-color: #3b82f6;
+            --sidebar-accent-color: #00ff88;
             --sidebar-border-color: rgba(255, 255, 255, 0.05);
         }
 
