--- a/over.html
+++ b/over.html
@@ -11,7 +11,7 @@
             /* Variáveis do código principal */
             --primary: #10b981;
             --primary-dark: #059669;
-            --accent: #3b82f6;
+            --accent: #00ff88;
             --bg-primary: #0a0a0a;
             --bg-card: #111827;
             --bg-card-hover: #1f2937;
