--- a/statistics.html
+++ b/statistics.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RW TIPS - Estatísticas das Ligas</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@400;500;700&display=swap');
         :root {
             --primary-color: #6c5ce7;
             --secondary-color: #a29bfe;
