--- a/results.html
+++ b/results.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RW TIPS - Resultados</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+       @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@400;500;700&display=swap');
 
         :root {
             --primary-color: #6c5ce7;
