--- a/results.html
+++ b/results.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>RW TIPS - Resultados</title>
     <style>
-       @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@400;500;700&display=swap');
-
         :root {
             --primary-color: #6c5ce7;
             --secondary-color: #a29bfe;
@@ -30,6 +31,7 @@
         }
 
         body {
+            font-family: 'Oxanium', sans-serif;
             background: linear-gradient(135deg, var(--background-dark) 0%, #16161f 100%);
             color: var(--text-primary);
             min-height: 100vh;
