--- a/results.html
+++ b/results.html
@@ -27,7 +27,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
+            font-family: 'Oxanium', sans-serif;
         }
 
         body {
@@ -367,9 +367,6 @@
 
         <div id="resultsContainer"></div>
     </div>
-
-    <button onclick="window.location.href='visualization.html'" class="back-button">Voltar</button>
-
     <script>
         // Verificar login
         if (!sessionStorage.getItem('loggedIn')) {
