--- a/dashboard.html
+++ b/dashboard.html
@@ -589,7 +589,7 @@
     <!-- Sidebar -->
     <nav class="sidebar">
         <div class="sidebar-header">
-            <img src="https://i.ibb.co/G4Y8sHM/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="RW Tips"
+            <img src="https://i.ibb.co/G4Y8sHMk/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="RW Tips"
                 class="sidebar-logo">
             <span class="sidebar-title">RW TIPS</span>
         </div>
@@ -598,10 +598,10 @@
             </li>
             <li><a href="results.html"><span class="icon">📊</span><span class="label">Últimos Resultados</span></a>
             </li>
-            <li><a href="live.html"><span class="icon">🔴</span><span class="label">AO VIVO</span></a></li>
+            <li><a href="live_v2.html"><span class="icon">🔴</span><span class="label">AO VIVO</span></a></li>
             <li><a href="statistics.html"><span class="icon">📈</span><span class="label">Estatísticas das
                         Ligas</span></a></li>
-            <li><a href="bets.html"><span class="icon">💰</span><span class="label">Registrar Apostas</span></a></li>
+            <li><a href="formularioApostas.html"><span class="icon">💰</span><span class="label">Registrar Apostas</span></a></li>
             <li><a href="players.html"><span class="icon">🎮</span><span class="label">Análise de Jogadores</span></a>
             </li>
             <li class="active"><a href="dashboard.html"><span class="icon">📋</span><span
