--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1046,10 +1046,10 @@
     <ul class="sidebar-menu">
       <li><a href="visualization.html"><span class="icon">⚽</span><span class="label">Próximos Jogos</span></a></li>
       <li><a href="results.html"><span class="icon">📊</span><span class="label">Últimos Resultados</span></a></li>
-      <li><a href="live.html"><span class="icon">🔴</span><span class="label">AO VIVO</span></a></li>
+      <li><a href="live_v2.html"><span class="icon">🔴</span><span class="label">AO VIVO</span></a></li>
       <li><a href="statistics.html"><span class="icon">📈</span><span class="label">Estatísticas das Ligas</span></a>
       </li>
-      <li class="active"><a href="bets.html"><span class="icon">💰</span><span class="label">Registrar
+      <li class="active"><a href="formularioApostas.html"><span class="icon">💰</span><span class="label">Registrar
             Apostas</span></a></li>
       <li><a href="players.html"><span class="icon">🎮</span><span class="label">Análise de Jogadores</span></a></li>
       <li><a href="dashboard.html"><span class="icon">📋</span><span class="label">Dashboard</span></a></li>
@@ -1061,14 +1061,6 @@
 
   <div class="app-container">
     <div class="back-to-visualization">
-      <a href="visualization.html" class="back-button-link">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M19 12H5"></path>
-          <path d="M12 19l-7-7 7-7"></path>
-        </svg>
-        Voltar
-      </a>
       <button class="logout-button" onclick="logout()">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
