--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1039,9 +1039,9 @@
 <body>
   <nav class="sidebar">
     <div class="sidebar-header">
-      <img src="https://i.ibb.co/G4Y8sHM/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="RW Tips"
+      <img src="https://i.ibb.co/G4Y8sHMk/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="RW Tips"
         class="sidebar-logo">
-      <span class="sidebar-title">Sistema de Apostas</span>
+      <span class="sidebar-title">RW TIPS</span>
     </div>
     <ul class="sidebar-menu">
       <li><a href="visualization.html"><span class="icon">⚽</span><span class="label">Próximos Jogos</span></a></li>
@@ -1060,17 +1060,6 @@
   </nav>
 
   <div class="app-container">
-    <div class="back-to-visualization">
-      <button class="logout-button" onclick="logout()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-          <polyline points="16 17 21 12 16 7"></polyline>
-          <line x1="21" y1="12" x2="9" y2="12"></line>
-        </svg>
-        Sair
-      </button>
-    </div>
     <div class="container">
       <header class="header">
         <h1 class="app-title">Controle de Apostas</h1>
