--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -22,9 +22,9 @@
       --color-accent-light: #34d399;
       --color-danger: #ef4444;
       --color-danger-light: #f87171;
-      --color-bg-dark: #0a0e17;
+      --color-bg-dark: #000000;
       --color-bg-medium: #111827;
-      --color-bg-light: #1f2937;
+      --color-bg-light: rgb(0, 0, 0);
       --color-text-primary: #f8fafc;
       --color-text-secondary: #cbd5e1;
       --color-text-tertiary: #94a3b8;
