--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1110,6 +1110,7 @@
           <div class="summary-item balance">
             <div class="label">Saldo Total</div>
             <div class="value" id="saldo-total">R$ 0,00</div>
+            <div class="sub-value">Unidades: <span id="unidades-saldo">0</span></div>
           </div>
           <div class="summary-item">
             <div class="label">Estatísticas</div>
@@ -1702,9 +1703,10 @@
       // Calcular e atualizar unidades
       const unidadesGanhas = valorUnidade > 0 ? (ganhoTotal / valorUnidade).toFixed(2) : "0.00";
       const unidadesPerdidas = valorUnidade > 0 ? (perdaTotal / valorUnidade).toFixed(2) : "0.00";
+      const unidadesSaldo = valorUnidade > 0 ? ((ganhoTotal - perdaTotal) / valorUnidade).toFixed(3) : "0.00";
       document.getElementById("unidades-ganhas").textContent = unidadesGanhas;
       document.getElementById("unidades-perdidas").textContent = unidadesPerdidas;
-
+      document.getElementById("unidades-saldo").textContent = unidadesSaldo;
       // Criar gráfico inicial com 7 dias
       criarGrafico(7);
     }
